Fixes scrolling on mobile devices.

--- a/styles/index.css
+++ b/styles/index.css
@@ -48,7 +48,7 @@ body {
 	top: 0;
 	width: 100vw;
 	z-index: 1;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .content-wrapper {
